<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="projet.fst.ma.app.MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:labelFor="@+id/nom" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/nom_label"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        style="@style/myStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:labelFor="@+id/prenom" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="personGivenName"
        android:hint="@string/prenom_label"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/valider" />

    <TextView
        android:id="@+id/textView3"
        style="@style/myStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        android:labelFor="@+id/id" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="none"
        android:hint="ID"
        android:inputType="number" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/chercher" />

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/supprimer" />

</LinearLayout>
